[package]
name = "pakit"
version = "0.0.1"
edition = "2018"
authors = ["ParampreetR <raja.rai6789@gmail.com>"]
description  = "A Library to send manually crafted data frames or packets and read received packets or dataframes"
repository = "https://github.com/ParampreetR/pakit-rust"
license = "Apache-2.0"
keywords = ["packet", "pakit", "manipulation", "tcp", "arp", "testing"]
categories = ["network-programming"]


[features]
pcap = ["pcap-file"]

[dependencies]
pnet_datalink = "0.28.0"
pcap-file = { version = "1.1.1", optional = true }
